configuration/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-microproject-deployment
  labels:
    app: k8s-microproject-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-microproject-deployment
  template:
    metadata:
      name: k8s-microproject-deployment
      labels:
        app: k8s-microproject-deployment
    spec:
      containers:
        - name: k8s-microproject-deployment
          image: clelgo/k8s-microproject
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
