configuration/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: k8s-microproject-statefulset
  labels:
    app: k8s-microproject
spec:
  selector:
    matchLabels:
      app: k8s-microproject
  serviceName: k8s-microproject-service
  template:
    metadata:
      labels:
        app: k8s-microproject
    spec:
      containers:
        - name: k8s-microproject-container
          image: clelgo/k8s-microproject
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - mountPath: /app/data
              name: k8s-microproject-storage
      volumes:
        - name: k8s-microproject-storage
          persistentVolumeClaim:
            claimName: k8s-microproject-pv-claim
