configuration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-microproject-ingress
spec:
  ingressClassName: nginx
  tls:
    - secretName: k8s-microproject.dev-tls
      hosts:
        - k8s-microproject.dev
  rules:
    - host: k8s-microproject.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-microproject-service
                port:
                  number: 80
